@@ -1,5 +1,7 @@
 
 Version 0.8.6	- xx October 2001
+  * Fix a lot of global function arg counts for Python 2.2
+  	(many constructors can take no arguments now)
   * Fix spurious warning (Function return types are inconsistent)
 	when multiple returns w/a constant & a local variable of same type
   * Fix spurious warning for format strings when using a dict local variable
